[package]
name = "astexplorer-syn"
version = "0.15.30"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
proc-macro2 = { version = "0.4.27", features = ["span-locations"] }
syn = { version = "=0.15.30", path = "syn", default-features = false, features = ["derive", "parsing", "printing", "full"] }
wasm-bindgen = "0.2.39"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0.39"
syn-codegen = "0.2"

[profile.release]
opt-level = "z"
lto = true
