[package]
name = "astexplorer-syn"
version = "1.0.57"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "=1.0.57", path = "syn", default-features = false, features = ["derive", "parsing", "printing", "full"] }
wasm-bindgen = "0.2.39"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0.39"
syn-codegen = "0.2"

[profile.release]
opt-level = "z"
lto = true
